# marketplace-indexer

./: .env.db  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.near/: config.json  genesis.json  node_key.json  validator_key.json
src/: main.rs
